--- a/voom-app/app/src/main/res/layout-sw600dp/fragment_profile.xml
+++ b/voom-app/app/src/main/res/layout-sw600dp/fragment_profile.xml
@@ -9,15 +9,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="48dp">
+        android:padding="72dp">
 
-        <!-- GUIDELINES FOR NARROW COLUMNS -->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_left"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.15" />
+            app:layout_constraintGuide_percent="0.12" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_center"
@@ -31,119 +30,157 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.85" />
+            app:layout_constraintGuide_percent="0.88" />
 
-        <!-- AVATAR (CENTERED) -->
         <ImageView
             android:id="@+id/img_avatar"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:src="@drawable/baseline_person_24"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="96dp"
             android:contentDescription="@string/profile_picture"
-            android:layout_marginTop="120dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/baseline_person_24"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- FULL NAME (CENTERED) -->
         <TextView
             android:id="@+id/txt_full_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:text="@string/name_lastname"
-            android:textSize="18sp"
+            android:textSize="26sp"
             android:textStyle="bold"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/img_avatar"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/img_avatar" />
 
-        <!-- FIRST NAME (LEFT COLUMN) -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_first_name"
             style="@style/RoundedOutlinedInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="32dp"
             android:hint="@string/first_name"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintTop_toBottomOf="@id/txt_full_name"
+            app:layout_constraintEnd_toStartOf="@id/guideline_center"
             app:layout_constraintStart_toStartOf="@id/guideline_left"
-            app:layout_constraintEnd_toStartOf="@id/guideline_center">
+            app:layout_constraintTop_toBottomOf="@id/txt_full_name">
 
-
-        <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_first_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="48dp"/>
+                android:minHeight="64dp"
+                android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- EMAIL (RIGHT COLUMN) -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_email"
             style="@style/RoundedOutlinedInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
             android:hint="@string/email"
-            android:layout_marginStart="24dp"
-            app:layout_constraintTop_toTopOf="@id/til_first_name"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right">
+            app:layout_constraintTop_toTopOf="@id/til_first_name">
 
-
-        <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="48dp"
-                android:inputType="textEmailAddress"/>
+                android:inputType="textEmailAddress"
+                android:minHeight="64dp"
+                android:textSize="18sp"
+                android:enabled="false"  />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- LAST NAME -->
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_last_name"
             style="@style/RoundedOutlinedInput"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:hint="@string/last_name"
-            app:layout_constraintTop_toBottomOf="@id/til_first_name"
+            app:layout_constraintEnd_toEndOf="@id/til_first_name"
             app:layout_constraintStart_toStartOf="@id/til_first_name"
-            app:layout_constraintEnd_toEndOf="@id/til_first_name">
+            app:layout_constraintTop_toBottomOf="@id/til_first_name">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_last_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="48dp"/>
+                android:minHeight="64dp"
+                android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <!-- CHANGE PASSWORD -->
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_change_password"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:text="@string/change_password"
-            android:layout_marginTop="16dp"
-            app:cornerRadius="24dp"
+            android:textSize="16sp"
             app:backgroundTint="@color/primary"
-            app:layout_constraintTop_toBottomOf="@id/til_email"
+            app:cornerRadius="32dp"
+            app:layout_constraintEnd_toEndOf="@id/til_email"
             app:layout_constraintStart_toStartOf="@id/til_email"
-            app:layout_constraintEnd_toEndOf="@id/til_email"/>
+            app:layout_constraintTop_toBottomOf="@id/til_email" />
 
-        <!-- SAVE BUTTON -->
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_address"
+            style="@style/RoundedOutlinedInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="32dp"
+            android:hint="@string/address"
+            app:layout_constraintEnd_toStartOf="@id/guideline_center"
+            app:layout_constraintStart_toStartOf="@id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@id/btn_change_password">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPostalAddress"
+                android:minHeight="64dp"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_phone_number"
+            style="@style/RoundedOutlinedInput"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:hint="@string/phone_number"
+            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
+            app:layout_constraintTop_toTopOf="@id/til_address">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_phone_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:minHeight="64dp"
+                android:textSize="18sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_save"
-            android:layout_width="320dp"
+            android:layout_width="420dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
             android:text="@string/save_changes"
-            android:layout_marginTop="64dp"
-            app:cornerRadius="28dp"
+            android:textSize="18sp"
             app:backgroundTint="@color/primary"
-            app:layout_constraintTop_toBottomOf="@id/til_last_name"
+            app:cornerRadius="36dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@id/til_address" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
