--- a/voom-app/app/src/main/res/values/colors.xml
+++ b/voom-app/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="gray_600">#4B5563</color>>
 </resources>
