--- a/voom-app/app/src/main/res/layout/fragment_driver_ride_history.xml
+++ b/voom-app/app/src/main/res/layout/fragment_driver_ride_history.xml
@@ -13,20 +13,19 @@
         android:id="@+id/textView8"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
         android:text="Activity"
         android:textAlignment="center"
-        android:textColor="#320707"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/booking_date_input_layout"
         style="?attr/textInputOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
         android:hint="Select date range for filtering"
         app:boxBackgroundMode="outline"
         app:boxCornerRadiusBottomEnd="26dp"
@@ -38,9 +37,10 @@
         app:endIconContentDescription="Open Date Picker"
         app:endIconDrawable="@android:drawable/ic_menu_today"
         app:endIconMode="custom"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="12dp"
         app:placeholderTextColor="@color/primary">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -59,38 +59,60 @@
         android:id="@+id/apply_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="100dp"
+
+        android:layout_marginTop="12dp"
         android:text="Apply Filter"
+
         app:cornerRadius="32dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/booking_date_input_layout" />
+        app:layout_constraintTop_toBottomOf="@id/booking_date_input_layout" />
 
+    <TextView
+        android:id="@+id/clearFiltersText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear filters"
+        android:textColor="@color/primary"
+        android:textSize="14sp"
+        android:clickable="true"
+        android:focusable="true"
+
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/apply_btn"
+        app:layout_constraintBottom_toBottomOf="@id/apply_btn"
+
+        android:layout_marginStart="8dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rideRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/apply_btn" />
+        app:layout_constraintTop_toBottomOf="@id/apply_btn"
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/sortButton"
-        android:layout_width="36dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="12dp"
-        android:src="@android:drawable/ic_menu_sort_by_size"
-        app:layout_constraintBottom_toTopOf="@+id/rideRecyclerView"
+
+        android:background="#03FDF7F7"
+        android:contentDescription="Sort Button"
+        android:src="@drawable/ic_sort"
+        app:layout_constraintBottom_toBottomOf="@id/apply_btn"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/booking_date_input_layout"
-        app:layout_constraintVertical_bias="0.812" />
+        app:layout_constraintTop_toTopOf="@id/apply_btn"
+        app:layout_constraintVertical_bias="1.0"
+        tools:src="@drawable/ic_sort" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
