--- a/voom-app/app/src/main/res/layout/item_ride.xml
+++ b/voom-app/app/src/main/res/layout/item_ride.xml
@@ -131,6 +131,12 @@
                     android:textSize="14sp"
                     android:paddingTop="4dp"/>
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/passengerRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"/>
+
             </LinearLayout>
 
         </LinearLayout>
