--- a/voom-app/app/src/main/res/navigation/user_nav_graph.xml
+++ b/voom-app/app/src/main/res/navigation/user_nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/profileFragment">
     <fragment
         android:id="@+id/profileFragment"
-        android:name="inc.visor.voom.app.driver.create.CreateDriverFragment"
+        android:name="inc.visor.voom.app.user.home.UserHomeFragment"
         android:label="ProfileFragment">
     </fragment>
 
